<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_supp_needs"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.cpcrasher.survival.mainActivity.SuppNeedsActivity">

    <Button
        android:text="Send"
        android:background="@color/colorSupp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/sendButtSuppNeeds"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <TextView
        android:id="@+id/needText"
        android:text="@string/need_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@android:color/black"
        android:textSize="15sp"
        android:layout_below="@+id/survivalDaysSpinner"
        android:layout_alignLeft="@+id/foodCheckBox"
        android:layout_alignStart="@+id/foodCheckBox"
        android:layout_marginTop="13dp" />

    <CheckBox
        android:id="@+id/shelterCheckBox"
        android:text="@string/needShelter_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:button="@null"
        android:drawableRight="?android:attr/listChoiceIndicatorMultiple"
        android:textSize="15sp"
        android:textColorLink="@android:color/holo_green_dark"
        android:focusable="false"
        android:theme="@style/CheckBoxSupp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/needText"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <CheckBox
        android:id="@+id/hygieneCheckBox"
        android:text="@string/needHygiene_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:button="@null"
        android:drawableRight="?android:attr/listChoiceIndicatorMultiple"
        android:textSize="15sp"
        android:textColorLink="@android:color/holo_green_dark"
        android:focusable="false"
        android:theme="@style/CheckBoxSupp"
        android:layout_below="@+id/heatingCheckBox"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <CheckBox
        android:id="@+id/electricityCheckBox"
        android:text="@string/needElectricity_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:button="@null"
        android:drawableRight="?android:attr/listChoiceIndicatorMultiple"
        android:textSize="15sp"
        android:textColorLink="@android:color/holo_green_dark"
        android:focusable="false"
        android:theme="@style/CheckBoxSupp"
        android:layout_below="@+id/shelterCheckBox"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <CheckBox
        android:id="@+id/heatingCheckBox"
        android:text="@string/needHeating_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:button="@null"
        android:drawableRight="?android:attr/listChoiceIndicatorMultiple"
        android:textSize="15sp"
        android:textColorLink="@android:color/holo_green_dark"
        android:focusable="false"
        android:theme="@style/CheckBoxSupp"
        android:layout_below="@+id/electricityCheckBox"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <CheckBox
        android:id="@+id/transportCheckBox"
        android:text="@string/needTransport_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:button="@null"
        android:drawableRight="?android:attr/listChoiceIndicatorMultiple"
        android:textSize="15sp"
        android:textColorLink="@android:color/holo_green_dark"
        android:focusable="false"
        android:theme="@style/CheckBoxSupp"
        android:layout_below="@+id/hygieneCheckBox"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <CheckBox
        android:id="@+id/protectionCheckBox"
        android:text="@string/needProtection_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:button="@null"
        android:drawableRight="?android:attr/listChoiceIndicatorMultiple"
        android:textSize="15sp"
        android:textColorLink="@android:color/holo_green_dark"
        android:focusable="false"
        android:theme="@style/CheckBoxSupp"
        android:layout_below="@+id/transportCheckBox"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <CheckBox
        android:id="@+id/commCheckBox"
        android:text="@string/needCommunication_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:button="@null"
        android:drawableRight="?android:attr/listChoiceIndicatorMultiple"
        android:textSize="15sp"
        android:textColorLink="@android:color/holo_green_dark"
        android:focusable="false"
        android:theme="@style/CheckBoxSupp"
        android:layout_below="@+id/protectionCheckBox"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

</RelativeLayout>
