<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_surroundings"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.cpcrasher.survival.mainActivity.SurroundingsActivity">

    <Button
        android:text="Send"
        android:background="?android:attr/colorPressedHighlight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/sendButtSurroundings"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <TextView
        android:id="@+id/disasterText"
        android:text="@string/disaster_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@android:color/black"
        android:textSize="15sp"
        android:layout_below="@+id/survivalDaysSpinner"
        android:layout_alignLeft="@+id/foodCheckBox"
        android:layout_alignStart="@+id/foodCheckBox"
        android:layout_marginTop="13dp" />

    <CheckBox
        android:id="@+id/hurricaneCheckBox"
        android:text="@string/hurricane_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:button="@null"
        android:drawableRight="?android:attr/listChoiceIndicatorMultiple"
        android:textSize="15sp"
        android:textColorLink="@android:color/holo_green_dark"
        android:focusable="false"
        android:theme="@style/CheckBoxSurr"
        android:layout_below="@+id/tornadoCheckBox"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <CheckBox
        android:id="@+id/earthquakeCheckBox"
        android:text="@string/earthquake_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:button="@null"
        android:drawableRight="?android:attr/listChoiceIndicatorMultiple"
        android:textSize="15sp"
        android:textColorLink="@android:color/holo_green_dark"
        android:focusable="false"
        android:theme="@style/CheckBoxSurr"
        android:layout_below="@+id/hurricaneCheckBox"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <CheckBox
        android:id="@+id/terroristCheckBox"
        android:text="@string/terrorist_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:button="@null"
        android:drawableRight="?android:attr/listChoiceIndicatorMultiple"
        android:textSize="15sp"
        android:textColorLink="@android:color/holo_green_dark"
        android:focusable="false"
        android:theme="@style/CheckBoxSurr"
        android:layout_below="@+id/tsunamiCheckBox"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <CheckBox
        android:id="@+id/tornadoCheckBox"
        android:text="@string/tornado_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:button="@null"
        android:drawableRight="?android:attr/listChoiceIndicatorMultiple"
        android:textSize="15sp"
        android:textColorLink="@android:color/holo_green_dark"
        android:focusable="false"
        android:theme="@style/CheckBoxSurr"
        android:layout_below="@+id/disasterText"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <CheckBox
        android:id="@+id/tsunamiCheckBox"
        android:text="@string/tsunami_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:button="@null"
        android:drawableRight="?android:attr/listChoiceIndicatorMultiple"
        android:textSize="15sp"
        android:textColorLink="@android:color/holo_green_dark"
        android:focusable="false"
        android:theme="@style/CheckBoxSurr"
        android:layout_below="@+id/earthquakeCheckBox"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <Spinner
        android:id="@+id/buildingDestructionSpinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:popupBackground="@color/colorAccentWhite"
        android:entries="@array/buildingDestruction_arrays"
        android:prompt="@string/buildingDestruction_text"
        android:backgroundTint="@color/colorSurr"
        android:layout_below="@+id/buildingDestructionText"
        android:layout_alignParentLeft="true"
        android:textSize="15sp"
        android:layout_alignParentStart="true" />

    <Spinner
        android:id="@+id/waterLevelSpinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:popupBackground="@color/colorAccentWhite"
        android:entries="@array/waterLevel_arrays"
        android:prompt="@string/waterLevel_text"
        android:backgroundTint="@color/colorSurr"
        android:textSize="15sp"
        android:layout_below="@+id/waterLevelText"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:id="@+id/waterLevelText"
        android:text="@string/waterLevel_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@android:color/black"
        android:textSize="15sp"
        android:layout_marginTop="10dp"
        android:layout_below="@+id/buildingDestructionSpinner"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:id="@+id/buildingDestructionText"
        android:text="@string/buildingDestruction_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@android:color/black"
        android:textSize="15sp"
        android:layout_below="@+id/terroristCheckBox"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="11dp" />

    <CheckBox
        android:id="@+id/accessCheckBox"
        android:text="@string/access_question"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:button="@null"
        android:drawableRight="?android:attr/listChoiceIndicatorMultiple"
        android:textSize="15sp"
        android:textColorLink="@android:color/holo_green_dark"
        android:focusable="false"
        android:theme="@style/CheckBoxSurr"
        android:layout_below="@+id/waterLevelText"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="26dp"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

</RelativeLayout>
